[package]
name = "cashu-dlcstr-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bip39 = "2.0"
clap = { version = "4.4.8", features = ["derive", "env", "default"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes", "log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.8.5"
home = "0.5.9"
nostr-sdk = { version = "0.33.0", default-features = false, features = [
    "nip04",
    "nip44"
]}
cdk = { version = "0.2.0", default-features = false, features = ["wallet"] }
cdk-redb = { version = "0.2.0", default-features = false, features = ["wallet"] }
cdk-sqlite = { version = "0.2.0", default-features = false, features = ["wallet"] }
url = "2.3"
dlc-messages = { version = "0.5.0", features = ["use-serde"] }
lightning = "0.0.121"
nostr = "0.29.1"


